update post and put
